# oglal

./: .gitignore  .gitmodules  LICENSE  oal.cabal  stack.yaml
src/: Main.hs
src/My/: Sound.hs
