name:                oal
version:             0.1.0.0
homepage:            http://github.com/nilcons/oal#readme
license:             BSD3
license-file:        LICENSE
author:              Mihaly Barasz
maintainer:          klao@nilcons.com
copyright:           Copyright (C) 2015 Mihaly Barasz
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
synopsis:            Initial project template from stack
description:         Please see README.md

executable oal
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    My.Sound
  ghc-options:         -Wall -O -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:
      base
    , OpenAL
    , OpenGL
    , GLFW-b
    , StateVar
    , stm
    , lens
    , vector
